--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,50 @@
-<h1>Sign Up</h1>
-<%= form_for @user do |f|%>
-  <%= f.label :username%><br>
-  <%= f.text_field :username%><br>
-  <%= f.label :password%><br>
-  <%= f.password_field :password%><br>
-  <%= f.submit %>
-<%end%>
+<% if flash[:alert] %>
+  <div class="alert alert-danger">
+    <span class="error"><%= flash[:alert] %></span>
+  </div>
+<% end %>
+<div id="loginModal" class="modal show" style="margin-top:100px;" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <!--    <div class="modal-content">-->
+    <div align="center">
+      <!--        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>-->
+      <img src="/assets/logo.jpg"/>
+    </div>
+    <div class="modal-header">
+      <!--        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>-->
+      <h1 class="text-center">Sign Up</h1>
+    </div>
+    <div class="modal-body">
+      <%= form_for @user,({:class => 'form col-md-12 center-block'}) do |f|%>
+        <div class="form-group">
+          <%= f.text_field :username, class: "form-control input-lg", placeholder: "username" %>
+        </div>
+        <div class="form-group">
+          <%= f.password_field :password, class: "form-control input-lg",placeholder: "password"%>
+        </div>
+        <div class="form-group">
+          <%= f.submit class: "btn btn-primary btn-lg btn-block"%>
+          <%= link_to '/login' do %>
+            <span class="pull-right">Login</span>
+          <% end %>
+<!--          <span><a href="#">Need help?</a></span>-->
+        </div>
+      <%end%>
+      <!--        </form>-->
+    </div>
+    <!--      <div class="modal-footer">-->
+    <!--        <div class="col-md-1accordion2">-->
+    <!--          <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--    </div>-->
+  </div>
+</div>
+<!--<h1>Sign Up</h1>-->
+<%#= form_for @user do |f|%>
+<!--  <%#= f.label :username%><br>-->
+<!--  <%#= f.text_field :username%><br>-->
+<!--  <%#= f.label :password%><br>-->
+<!--  <%#= f.password_field :password%><br>-->
+  <%#= f.submit %>
+<%#end%>
