--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,7 +23,7 @@
           <%= f.password_field :password, class: "form-control input-lg",placeholder: "password"%>
         </div>
         <div class="form-group">
-          <%= f.submit class: "btn btn-primary btn-lg btn-block"%>
+          <%= f.submit "Create User", class: "btn btn-primary btn-lg btn-block"%>
           <%= link_to '/login' do %>
             <span class="pull-right">Login</span>
           <% end %>
@@ -46,5 +46,6 @@
 <!--  <%#= f.text_field :username%><br>-->
 <!--  <%#= f.label :password%><br>-->
 <!--  <%#= f.password_field :password%><br>-->
-  <%#= f.submit %>
+  
+
 <%#end%>
