--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,15 +15,15 @@
       <h1 class="text-center">Sign Up</h1>
     </div>
     <div class="modal-body">
-      <%= form_for @user,({:class => 'form col-md-12 center-block'}) do |f|%>
+      <%= form_tag '/users/create',({:class => 'form col-md-12 center-block'}) do%>
         <div class="form-group">
-          <%= f.text_field :username, class: "form-control input-lg", placeholder: "username" %>
+          <%= text_field_tag :username,"", class: "form-control input-lg", placeholder: "username" %>
         </div>
         <div class="form-group">
-          <%= f.password_field :password, class: "form-control input-lg",placeholder: "password"%>
+          <%= password_field_tag :password,"", class: "form-control input-lg",placeholder: "password"%>
         </div>
         <div class="form-group">
-          <%= f.submit class: "btn btn-primary btn-lg btn-block"%>
+          <%= submit_tag "submit", class: "btn btn-primary btn-lg btn-block"%>
           <%= link_to '/login' do %>
             <span class="pull-right">Login</span>
           <% end %>
