--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script>
+  $(document).ready(function(){
+     $('.dropdown-toggle').dropdown()
+  });
+  </script>
   <head>
-    <title>LionMessage</title>
+    <meta charset="UTF-8">
+    <title>Lion Message</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%#= javascript_pack_tag 'application' %>
-    <% if current_user %>
-      <h1>LionMessage</h1>
-      <h1>Username: <%= current_user.username %></h1>
-      <%= button_to "Logout_layout", '/logout', method: :get%>
-    <% else %>
-      <%= button_to "Login_layout", '/login', method: :get%>
-      <%= button_to "Signup_layout", '/users/new', method: :get%>
-    <%end%>
+    <%= javascript_pack_tag 'application' %>
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%= link_to 'Lion Message', '/', :class => "navbar-brand" %>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+          <% if current_page?(:controller => 'post', :action => 'show') %>
+            <li class="active"><a href="#">Posts<span class="sr-only">(current)</span></a></li>
+          <%else%>
+            <li><%= link_to 'Posts', '/post/show' %></li>
+          <%end%>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter By Tags<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+        
+        <form class="navbar-form navbar-left">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Your posts">
+          </div>
+          <button type="submit" class="btn btn-default">Search</button>
+        </form>
+
+        <ul class="nav navbar-nav navbar-right">
+          <% if current_user %>
+            <li><a href="#">Hi, <%= current_user.username %></a></li>
+            <li><%= link_to 'Logout', '/logout' %></li>
+          <%else%>
+            <li><%= link_to 'Sign Up', '/users/new' %></li>
+            <li><%= link_to 'Login', '/login' %></li>
+          <%end%>
+        </ul>
+
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
   </head>
 
   <body>
