--- a/app/views/post/new.html.erb
+++ b/app/views/post/new.html.erb
@@ -1,14 +1,35 @@
-<h1>Post#new</h1>
-<p>Find me in app/views/post/new.html.erb</p>
-<h1>New post</h1>
-<%= form_tag '/post/create' do %>
-  <%= label_tag :topic %>
-  <%= text_field_tag :topic %>
-  <%= label_tag :department %>
-  <%= text_field_tag :department %>
-  <%= label_tag :subject %>
-  <%= text_field_tag :subject %>
-  <%= label_tag :body %>
-  <%= text_field_tag :body %>
-  <%= submit_tag "Submit"%>
-<%end%>
+<div class="container">
+  <div class="row align-items-center">
+    <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
+
+      <div class="panel panel-primary">
+
+        <div class="panel-heading">Your Posts</div>
+
+        <div style="padding: 25px">
+          <%= form_tag '/post/create', :class => "form-horizontal center" do %>
+            <div class="form-group">
+              <%= label_tag :topic %>
+              <%= text_field_tag :topic,"" , class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= label_tag :department %>
+              <%= text_field_tag :department,"" , class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= label_tag :subject %>
+              <%= text_field_tag :subject,"" , class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= label_tag :body %>
+              <%= text_area_tag :body,"" , class: "form-control" %>
+            </div>
+            <%= submit_tag "Submit", :class => "btn btn-primary" %>
+          <%end%>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
