--- a/app/views/post/show.html.erb
+++ b/app/views/post/show.html.erb
@@ -1,25 +1,32 @@
-<h1>Post#show</h1>
-<p>Find me in app/views/post/show.html.erb</p>
-
-<table>
-  <thead>
-    <tr>
-      <th>Topic</th>
-      <th>Department</th>
-      <th>Subject</th>
-      <th>Body</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @posts.each do |post| -%>
-      <tr>
-        <th><%= post.topic %></th>
-        <th><%= post.department %></th>
-        <th><%= post.subject %></th>
-        <th><%= post.body %></th>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= button_to "Create a new post", '/post/new', method: :get%>
+<div class="container">
+  <div class="row align-items-center">
+    <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 main">
+      <div class="panel panel-primary">
+      <div class="panel-heading">Your Posts</div>
+        <table class="table table-striped">
+          <thead>
+            <tr class="bg-info">
+              <th>#</th>
+              <th>Topic</th>
+              <th>Department</th>
+              <th>Subject</th>
+              <th>Body</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @posts.each do |post| -%>
+              <tr>
+                <th><%= post.id %></th>
+                <th><%= post.topic %></th>
+                <th><%= post.department %></th>
+                <th><%= post.subject %></th>
+                <th><%= post.body %></th>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    <%= button_to "Create a new post", '/post/new', method: :get, :class => 'btn btn-primary'%>
+    </div>
+  </div>
+</div>
