Fixed logout cucumber bug.

--- a/app/views/post/show.html.erb
+++ b/app/views/post/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row align-items-center">
     <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 main">
       <div class="panel panel-primary">
-      <div class="panel-heading">Your Posts</div>
+      <div class="panel-heading"><%= current_user.username %>'s Posts</div>
         <table class="table table-striped">
           <thead>
             <tr class="bg-info">
