--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,10 +31,10 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-          <% if current_page?(:controller => 'post', :action => 'show') %>
+          <% if current_page?(:controller => 'posts', :action => 'index') %>
             <li class="active"><a href="#">Posts<span class="sr-only">(current)</span></a></li>
           <%else%>
-            <li><%= link_to 'Posts', '/post/show' %></li>
+            <li><%= link_to 'Posts', '/posts/show' %></li>
           <%end%>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter By Tags<span class="caret"></span></a>
