--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,7 +26,7 @@
           </tbody>
         </table>
       </div>
-    <%= button_to "Create a new post", '/post/new', method: :get, :class => 'btn btn-primary'%>
+    <%= button_to "Create a new posts", new_post_path, method: :get, :class => 'btn btn-primary'%>
     </div>
   </div>
 </div>
