--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,9 @@
 <div class="container">
+  <% if flash[:alert] %>
+    <div class="alert alert-danger"  style="text-align: center;">
+      <span class="error"><%= flash[:alert] %></span>
+    </div>
+  <% end %>
   <div class="row align-items-center">
     <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 
@@ -10,11 +15,14 @@
           <%= form_tag posts_path, :class => "form-horizontal center" do %>
             <div class="form-group">
               <%= label_tag :topic %>
-              <%= text_field_tag :topic,"" , class: "form-control" %>
+              <%= select_tag "topic", raw("<option></option>
+              <option>Course</option>
+              <option>Finance</option>
+              <option>Visa</option>"), {:class => "form-control" }%>
             </div>
             <div class="form-group">
               <%= label_tag :department %>
-              <%= text_field_tag :department,"" , class: "form-control" %>
+              <%= select_tag "department", options_from_collection_for_select(@departments, "name", "name",""), {:include_blank => '', :class => "form-control" }%>
             </div>
             <div class="form-group">
               <%= label_tag :subject %>
@@ -25,6 +33,7 @@
               <%= text_area_tag :body,"" , class: "form-control" %>
             </div>
             <%= submit_tag "Submit", :class => "btn btn-primary" %>
+            <%= link_to "Cancel", posts_path, :class => "btn btn-primary" %>
           <%end%>
         </div>
 
@@ -33,3 +42,29 @@
   </div>
 </div>
 
+<script>
+$("#topic").change(function() {
+    if ($(this).data('options') === undefined) {
+        /*Taking an array of all options-2 and kind of embedding it on the select1*/
+        $(this).data('options', $('#department option').clone());
+    }
+    var id = $(this).val();
+    var department_name;
+    switch(id) {
+        case "":
+            department_name = "";
+            break;
+        case "Course":
+            department_name = "<%= @user_department %>"
+            break;
+        case "Finance":
+            department_name = "Columbia Finance"
+            break;
+        case "Visa":
+            department_name = "ISSO"
+            break;
+    }
+    $("#department").val(department_name);
+
+});
+</script>
