Implemented reply editing feature.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row align-items-center">
     <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 main">
       <div class="panel panel-primary">
-        <div class="panel-heading">No.<%= @post.id %> post and replies</div>
+        <div class="panel-heading">No.<%= @post.id %> post</div>
         <table class="table table-striped">
           <thead>
           <tr class="bg-info">
@@ -17,7 +17,7 @@
               <th><%= @post.topic %></th>
               <th><%= @post.department %></th>
               <th><%= @post.subject %></th>
-              <th><%= @post.created_at%>
+              <th><%= @post.created_at %>
               </th>
             </tr>
           </tbody>
@@ -34,21 +34,38 @@
           </tr>
           </tbody>
         </table>
-        <table class="table table-striped">
+        <table class="table">
           <thead>
-          <tr class="bg-info">
-            <th style="text-align: center;">Following replies</th>
-          </tr>
+            <tr class="bg-primary">
+              <th style="text-align: center;">Replies</th>
+            </tr>
           </thead>
           <tbody>
-          <tr>
-            <th></th>
-          </tr>
+            <tr>
+            </tr>
+          </tbody>
+        </table>
+        <table class="table table-striped">
+          <thead>
+            <tr class="bg-info">
+              <th style="text-align: center;">User ID</th>
+              <th style="text-align: center;">Content</th>
+              <th style="text-align: center;">Time</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @replies.each do |reply| %>
+            <tr>
+              <th> <%= @user_id_to_username[reply.user_id] %> </th>
+              <th> <%= reply.content %> </th>
+              <th> <%= reply.created_at %> </th>
+            </tr>
+            <% end %>
           </tbody>
         </table>
       </div>
       <%= button_to "Send Reply", new_post_reply_path(@post), method: :get,:style => "float: left;", :class => 'btn btn-primary'%>
-      <%= button_to "View Replies", post_replies_path(@post), method: :get,:style => "float: left;", :class => 'btn btn-primary'%>
+      <%= button_to "Replies Detail", post_replies_path(@post), method: :get,:style => "float: left;", :class => 'btn btn-primary'%>
       <%= button_to "Edit post body", edit_post_path(@post), method: :get,:style => "float: left;", :class => 'btn btn-primary'%>
       <%= button_to "Back", posts_path, method: :get, :style => "margin-left: 20px;", :class => 'btn btn-primary'%>
     </div>
