--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,13 +5,10 @@
 <% end %>
 <div id="loginModal" class="modal show" style="margin-top:100px;" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <!--    <div class="modal-content">-->
     <div align="center">
-      <!--        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>-->
-      < img src="Rails.root/app/assets/logo.jpg"/>
+      <img src="<%= asset_path("logo.jpg") %>"/>
     </div>
     <div class="modal-header">
-      <!--        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>-->
       <h1 class="text-center">Sign Up</h1>
     </div>
     <div class="modal-body">
@@ -23,29 +20,15 @@
           <%= password_field_tag :password,"", class: "form-control input-lg",placeholder: "password"%>
         </div>
         <div class="form-group">
+          <%= select_tag "department", options_from_collection_for_select(@departments, "name", "name",""), {:include_blank => '', :class => "form-control" }%>
+        </div>
+        <div class="form-group">
           <%= submit_tag "submit", class: "btn btn-primary btn-lg btn-block"%>
           <%= link_to '/login' do %>
             <span class="pull-right">Login</span>
           <% end %>
-<!--          <span><a href="#">Need help?</a></span>-->
         </div>
       <%end%>
-      <!--        </form>-->
     </div>
-    <!--      <div class="modal-footer">-->
-    <!--        <div class="col-md-1accordion2">-->
-    <!--          <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>-->
-    <!--        </div>-->
-    <!--      </div>-->
-    <!--    </div>-->
   </div>
 </div>
-<!--<h1>Sign Up</h1>-->
-<%#= form_for @user do |f|%>
-<!--  <%#= f.label :username%><br>-->
-<!--  <%#= f.text_field :username%><br>-->
-<!--  <%#= f.label :password%><br>-->
-<!--  <%#= f.password_field :password%><br>-->
-  
-
-<%#end%>
