--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
               <%= label_tag :department %>
-              <%= select_tag "department", options_from_collection_for_select(@departments, "name", "name",""), {:include_blank => '', :class => "form-control" }%>
+              <%= select_tag "department", options_for_select(@departments), {:include_blank => '', :class => "form-control" }%>
             </div>
             <div class="form-group">
               <%= label_tag :subject %>
