--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,9 @@
 <div class="container">
+  <% if flash[:error] %>
+    <div class="alert alert-danger"  style="text-align: center;">
+      <span class="error"><%= flash[:error] %></span>
+    </div>
+  <% end %>
   <div class="row align-items-center">
     <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 main">
       <div class="panel panel-primary">
