--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,31 @@
-<%= current_user.username %>
-<%= current_user.email %>
-<%= current_user.department %>
+<% if flash[:alert] %>
+  <div class="alert alert-danger">
+    <span class="error"><%= flash[:alert] %></span>
+  </div>
+<% end %>
+<% if flash[:success] %>
+  <div class="alert alert-success">
+    <%= flash[:success] %>
+  </div>
+<% end %>
+<div id="loginModal" class="modal show" style="margin-top:100px;" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-header">
+        <h1 class="text-center"><%= current_user.username %></h1>
+      </div>
+      <div class="modal-body">
+        <%= form_tag '/user' ,({:class => 'form col-md-12 center-block'}) do %>
+          <div class="form-group">
+            <%= email_field_tag :email,"", class: "form-control input-lg", value: current_user.email %>
+          </div>
+        <div class="form-group">
+          <%= select_tag "department", options_from_collection_for_select(@departments, "name", "name", current_user.department), {:class => "form-control input-lg"}%>
+        </div>
+          <div class="form-group">
+            <%= submit_tag "Save", class: "btn btn-primary btn-lg btn-block"%>
+            <span><a href="#">Need help?</a></span>
+          </div>
+        <%end%>
+      </div>
+  </div>
+</div>
