--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,7 +30,7 @@
           </thead>
           <tbody>
           <tr>
-            <th style="word-break:break-all;"><%= @post.body %></th>
+            <th style="word-break:break-all; white-space: pre;"><%= @post.body %></th>
           </tr>
           </tbody>
         </table>
@@ -57,7 +57,7 @@
             <% @replies.each do |reply| %>
             <tr>
               <th> <%= @user_id_to_username[reply.user_id] %> </th>
-              <th> <%= reply.content %> </th>
+              <th style="word-break:break-all;"> <%= reply.content %> </th>
               <th> <%= reply.created_at %> </th>
             </tr>
             <% end %>
