--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -15,10 +15,15 @@
           <%= form_tag posts_path, :class => "form-horizontal center" do %>
             <div class="form-group">
               <%= label_tag :topic %>
-              <%= select_tag "topic", raw("<option></option>
-              <option>Course</option>
-              <option>Finance</option>
-              <option>Visa</option>"), {:class => "form-control" }%>
+              <%= select_tag "topic", raw("
+                <option>Course</option>
+                <option>Finance</option>
+                <option>Visa</option>
+                <option>Dining</option>
+                <option>Housing</option>
+                <option>Health</option>
+                <option>Other</option>
+              "), {:class => "form-control" }%>
             </div>
             <div class="form-group">
               <%= label_tag :department %>
