--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="width: 80%">
   <% if flash[:alert] %>
     <div class="alert alert-danger"  style="text-align: center;">
       <span class="error"><%= flash[:alert] %></span>
