--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="width: 80%">
   <div class="row align-items-center">
     <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 main">
       <div class="panel panel-primary">
