--- a/app/views/replies/new.html.erb
+++ b/app/views/replies/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="width: 80%">
   <% if flash[:alert] %>
     <div class="alert alert-danger"  style="text-align: center;">
       <span class="error"><%= flash[:alert] %></span>
@@ -18,7 +18,7 @@
               <%= text_area_tag :content,"" , class: "form-control" %>
             </div>
             <%= submit_tag "Send", :class => "btn btn-primary" %>
-            <%= link_to "Cancel", post_replies_path(@post), :class => "btn btn-primary" %>
+            <%= link_to "Cancel", post_path(@post), :class => "btn btn-primary" %>
           <%end%>
         </div>
 
