--- a/app/views/notification_mailer/new_reply_email.text.erb
+++ b/app/views/notification_mailer/new_reply_email.text.erb
@@ -1,4 +1,4 @@
-<%= @reply.user.username %> just replied your post "<%= @post.subject %>""
+<%= @reply.user.username %> just replied your post "<%= @post.subject %>"
 
 Content:
 <%= @reply.content %>
