--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,7 @@
             <li><%= link_to 'Posts', posts_path %></li>
           <% end %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter
-              By Topics<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter By Topics<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to 'All', posts_path(:post_content => params[:post_content], :filter_tag => params[:filter_tag]) %></li>
               <li><%= link_to 'Course', posts_path(:post_content => params[:post_content], :filter_tag => params[:filter_tag], :filter_topic => 'Course') %></li>
@@ -52,8 +51,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter
-              By Tags<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter By Tags<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to 'All', posts_path(:post_content => params[:post_content], :filter_topic => params[:filter_topic]) %></li>
               <li><%= link_to 'Post created', posts_path(:post_content => params[:post_content], :filter_topic => params[:filter_topic], :filter_tag => 'Post created') %></li>
